--- a/src/ui/main/Principal.fxml
+++ b/src/ui/main/Principal.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -125,9 +126,21 @@
             </HBox>
             <HBox alignment="TOP_RIGHT" prefWidth="200.0" spacing="20.0">
                <children>
-                  <JFXButton fx:id="btnSalvar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA;" text="Salvar" />
-                  <JFXButton fx:id="btnEditar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA;" text="Editar" />
-                  <JFXButton fx:id="btnExcluir" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA;" text="Excluir" />
+                  <JFXButton fx:id="btnSalvar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" onMouseEntered="#btnSalvarEntered" onMouseExited="#btnSalvarExited" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA; -fx-text-fill: #FFFFFF;" text="Salvar">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <JFXButton fx:id="btnEditar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" onMouseEntered="#btnEditarEntered" onMouseExited="#btnEditarExited" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA; -fx-text-fill: #FFFFFF;" text="Editar">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
+                  <JFXButton fx:id="btnExcluir" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" onMouseEntered="#btnExcluirEntered" onMouseExited="#btnExcluirExited" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA; -fx-text-fill: #FFFFFF;" text="Excluir">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </JFXButton>
                </children>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -155,13 +168,16 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </JFXComboBox>
-                  <JFXButton fx:id="btnFiltrar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA;" text="Filtrar">
+                  <JFXButton fx:id="btnFiltrar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" onMouseEntered="#btnFiltrarEntered" onMouseExited="#btnFiltrarExited" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #66CDAA; -fx-text-fill: #FFFFFF;" text="Filtrar">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </JFXButton>
                </children>
             </HBox>
