--- a/src/ui/produto/cadastro/Cadastro.fxml
+++ b/src/ui/produto/cadastro/Cadastro.fxml
@@ -16,7 +16,7 @@
 
 <BorderPane maxHeight="500.0" maxWidth="750.0" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.main.PrincipalController">
    <bottom>
-      <Label prefHeight="27.0" prefWidth="239.0" text="Desenvolvido por Cristiano Idelfonso da Silva" BorderPane.alignment="CENTER" />
+      <Label fx:id="lblRodape" prefHeight="27.0" prefWidth="239.0" text="Desenvolvido por Cristiano Idelfonso da Silva" BorderPane.alignment="CENTER" />
    </bottom>
    <left>
       <AnchorPane prefHeight="438.0" prefWidth="16.0" BorderPane.alignment="CENTER">
@@ -85,7 +85,7 @@
                   </JFXTextField>
                   <FlowPane alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="242.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Label fx:id="lblData" text="Validade:">
+                        <Label fx:id="lblValidade" text="Validade:">
                            <FlowPane.margin>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </FlowPane.margin>
@@ -93,7 +93,7 @@
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
                         </Label>
-                        <DatePicker fx:id="dpValidade" prefHeight="30.0" prefWidth="154.0">
+                        <DatePicker fx:id="dpDataValidade" prefHeight="30.0" prefWidth="154.0">
                            <FlowPane.margin>
                               <Insets right="5.0" />
                            </FlowPane.margin>
