Aula 03/10/2018 Definindo e dividindo o código em blocos lógicos

--- a/src/ui/main/Principal.fxml
+++ b/src/ui/main/Principal.fxml
@@ -15,7 +15,7 @@
          <menus>
             <Menu mnemonicParsing="false" text="Produto">
               <items>
-                <MenuItem mnemonicParsing="false" onAction="#abrirJanelaCadastro" text="Cadastro">
+                <MenuItem fx:id="menuItem" mnemonicParsing="false" onAction="#abrirJanelaCadastro" text="Cadastro">
                      <accelerator>
                         <KeyCodeCombination alt="UP" code="Q" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
