--- a/src/uiprodutocadastro/FXMLCadastroProduto.fxml
+++ b/src/uiprodutocadastro/FXMLCadastroProduto.fxml
@@ -13,38 +13,29 @@
 <?import javafx.scene.layout.HBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.produto.cadastro.FXMLCadastroProdutoController">
-   <top>
-      <FlowPane prefHeight="13.0" prefWidth="600.0" BorderPane.alignment="CENTER" />
-   </top>
-   <left>
-      <FlowPane prefHeight="387.0" prefWidth="10.0" BorderPane.alignment="CENTER" />
-   </left>
-   <right>
-      <FlowPane prefHeight="387.0" prefWidth="10.0" BorderPane.alignment="CENTER" />
-   </right>
    <bottom>
-      <FlowPane alignment="CENTER" prefHeight="18.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <FlowPane alignment="CENTER" prefHeight="18.0" prefWidth="600.0" style="-fx-background-color: #BFE3D5;" BorderPane.alignment="CENTER">
          <children>
             <Label fx:id="lblTextoRodape1" text="Desenvolvido por Cristiano Idelfonso da Silva" />
          </children>
       </FlowPane>
    </bottom>
    <center>
-      <FlowPane prefHeight="459.0" prefWidth="656.0" BorderPane.alignment="CENTER">
+      <FlowPane prefHeight="459.0" prefWidth="656.0" style="-fx-background-color: #BFE3D5;" BorderPane.alignment="CENTER">
          <children>
-            <HBox spacing="25.0">
+            <HBox alignment="CENTER_LEFT" spacing="25.0">
                <children>
-                  <JFXTextField fx:id="txtId" editable="false" labelFloat="true" promptText="ID:">
+                  <JFXTextField fx:id="txtId" editable="false" labelFloat="true" promptText="ID:" style="-fx-background-color: #BBBFFF;">
                      <HBox.margin>
-                        <Insets />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
                      </padding>
                   </JFXTextField>
-                  <JFXTextField fx:id="txtCodigo" labelFloat="true" promptText="Código:">
+                  <JFXTextField fx:id="txtCodigo" labelFloat="true" promptText="Código:" style="-fx-background-color: #BBBFFF;">
                      <HBox.margin>
-                        <Insets />
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
@@ -63,7 +54,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </FlowPane.margin>
                <children>
-                  <JFXTextField fx:id="txtNome" labelFloat="true" nodeOrientation="LEFT_TO_RIGHT" promptText="Nome:" HBox.hgrow="ALWAYS">
+                  <JFXTextField fx:id="txtNome" labelFloat="true" nodeOrientation="LEFT_TO_RIGHT" promptText="Nome:" style="-fx-background-color: #BBBFFF;" HBox.hgrow="ALWAYS">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
                      </padding>
@@ -75,22 +66,25 @@
             </HBox>
             <HBox prefHeight="37.0" prefWidth="682.0" spacing="25.0">
                <children>
-                  <JFXTextField fx:id="txtPreco" editable="false" labelFloat="true" promptText="Preço:">
+                  <JFXTextField fx:id="txtPreco" labelFloat="true" promptText="Preço:" style="-fx-background-color: #BBBFFF;">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
                      </padding>
                   </JFXTextField>
-                  <JFXTextField fx:id="txtQuantidade" editable="false" labelFloat="true" promptText="Quantidade:">
+                  <JFXTextField fx:id="txtQuantidade" labelFloat="true" promptText="Quantidade:" style="-fx-background-color: #BBBFFF;">
                      <padding>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
                      </padding>
                   </JFXTextField>
                   <FlowPane alignment="CENTER_RIGHT" prefWidth="200.0">
                      <children>
-                        <JFXDatePicker fx:id="dpValidade" promptText="Validade:">
+                        <JFXDatePicker fx:id="dpValidade" cache="true" defaultColor="#bd55d3" editable="false" promptText="Validade:" style="-fx-background-color: #BBBFFF;">
                            <padding>
                               <Insets left="10.0" right="10.0" top="12.0" />
                            </padding>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                         </JFXDatePicker>
                      </children>
                      <HBox.margin>
@@ -154,8 +148,8 @@
                <children>
                   <HBox alignment="CENTER" spacing="25.0">
                      <children>
-                        <JFXTextField fx:id="txtFiltro" prefHeight="25.0" prefWidth="260.0" />
-                        <JFXComboBox fx:id="cbFiltro" />
+                        <JFXTextField fx:id="txtFiltro" prefHeight="25.0" prefWidth="260.0" style="-fx-background-color: #BBBFFF;" />
+                        <JFXComboBox fx:id="cbFiltro" style="-jfx-focus-color: #BBBFFF;" />
                         <JFXButton fx:id="btnFiltrar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #BA55D3; -fx-text-fill: #FFFFFF;" text="Filtrar">
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
