--- a/src/ui/produto/cadastro/FXMLCadastroProduto.fxml
+++ b/src/ui/produto/cadastro/FXMLCadastroProduto.fxml
@@ -8,9 +8,11 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.produto.cadastro.FXMLCadastroProdutoController">
    <top>
@@ -147,31 +149,34 @@
                </FlowPane.margin>
             </FlowPane>
             <Separator prefHeight="21.0" prefWidth="682.0" />
-            <FlowPane alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308">
+            <FlowPane alignment="CENTER_LEFT">
                <FlowPane.margin>
                   <Insets />
                </FlowPane.margin>
                <children>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="307.0" spacing="25.0">
+                  <VBox>
                      <children>
-                        <JFXTextField fx:id="txtFiltro" prefHeight="25.0" prefWidth="260.0" />
-                        <JFXComboBox fx:id="cbFiltro" />
-                        <JFXButton fx:id="btnFiltrar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #5582d1; -fx-text-fill: #FFFFFF;" text="Filtrar">
+                        <HBox alignment="CENTER" spacing="25.0">
+                           <children>
+                              <JFXTextField fx:id="txtFiltro" prefHeight="25.0" prefWidth="260.0" />
+                              <JFXComboBox fx:id="cbFiltro" />
+                              <JFXButton fx:id="btnFiltrar" maxHeight="30.0" maxWidth="80.0" minHeight="30.0" minWidth="80.0" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #5582d1; -fx-text-fill: #FFFFFF;" text="Filtrar">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </JFXButton>
+                           </children>
                            <padding>
                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
-                           <cursor>
-                              <Cursor fx:constant="HAND" />
-                           </cursor>
-                        </JFXButton>
+                        </HBox>
+                        <Separator prefHeight="21.0" prefWidth="682.0" />
+                        <TableView fx:id="tblProdutos" prefHeight="160.0" prefWidth="682.0" />
                      </children>
-                     <FlowPane.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </FlowPane.margin>
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </HBox>
+                  </VBox>
                </children>
             </FlowPane>
          </children>
